// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders component in search mode and false for multiple choice: Component has correct render in search mode and mutiple choice equals false 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={false}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="search"
  value={Array []}
  valueKey="id"
>
  <StyledRoot
    $clearable={true}
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="search"
  >
    <div
      styled-component="true"
    >
      <StyledControlContainer
        $clearable={true}
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <Search
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            onClick={[Function]}
            overrides={
              Object {
                "Svg": [Function],
              }
            }
            size={16}
            title="search"
          >
            <Icon
              $clearable={true}
              $disabled={false}
              $error={false}
              $isFocused={false}
              $isLoading={false}
              $isOpen={false}
              $isPseudoFocused={false}
              $multi={false}
              $required={false}
              $searchable={true}
              $size="default"
              $type="search"
              onClick={[Function]}
              overrides={
                Object {
                  "Svg": [Function],
                }
              }
              size={16}
              title="search"
              viewBox="0 0 24 24"
            >
              <StyledSearchIcon
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  onClick={[Function]}
                  styled-component="true"
                  viewBox="0 0 24 24"
                >
                  <title>
                    search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </StyledSearchIcon>
            </Icon>
          </Search>
          <StyledValueContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <StyledPlaceholder
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </StyledPlaceholder>
              <StyledInputContainer
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $clearable={true}
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="search"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <StyledInput
                      $clearable={true}
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="search"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </StyledInput>
                    <StyledInputSizer
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </StyledInputSizer>
                  </AutosizeInput>
                </div>
              </StyledInputContainer>
            </span>
          </StyledValueContainer>
          <StyledIconsContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
          >
            <div
              styled-component="true"
            />
          </StyledIconsContainer>
        </div>
      </StyledControlContainer>
    </div>
  </StyledRoot>
</Select>
`;

exports[`Select component renders component in search mode and true for multiple choice: Component has correct render in search mode and mutiple choice equals true 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={true}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="search"
  value={Array []}
  valueKey="id"
>
  <StyledRoot
    $clearable={true}
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="search"
  >
    <div
      styled-component="true"
    >
      <StyledControlContainer
        $clearable={true}
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <Search
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            onClick={[Function]}
            overrides={
              Object {
                "Svg": [Function],
              }
            }
            size={16}
            title="search"
          >
            <Icon
              $clearable={true}
              $disabled={false}
              $error={false}
              $isFocused={false}
              $isLoading={false}
              $isOpen={false}
              $isPseudoFocused={false}
              $multi={false}
              $required={false}
              $searchable={true}
              $size="default"
              $type="search"
              onClick={[Function]}
              overrides={
                Object {
                  "Svg": [Function],
                }
              }
              size={16}
              title="search"
              viewBox="0 0 24 24"
            >
              <StyledSearchIcon
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  onClick={[Function]}
                  styled-component="true"
                  viewBox="0 0 24 24"
                >
                  <title>
                    search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </StyledSearchIcon>
            </Icon>
          </Search>
          <StyledValueContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <StyledPlaceholder
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </StyledPlaceholder>
              <StyledInputContainer
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="search"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $clearable={true}
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="search"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <StyledInput
                      $clearable={true}
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="search"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </StyledInput>
                    <StyledInputSizer
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </StyledInputSizer>
                  </AutosizeInput>
                </div>
              </StyledInputContainer>
            </span>
          </StyledValueContainer>
          <StyledIconsContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="search"
          >
            <div
              styled-component="true"
            />
          </StyledIconsContainer>
        </div>
      </StyledControlContainer>
    </div>
  </StyledRoot>
</Select>
`;

exports[`Select component renders component in select mode and false for multiple choice: Component has correct render in select mode and mutiple choice equals false 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={false}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="select"
  value={Array []}
  valueKey="id"
>
  <StyledRoot
    $clearable={true}
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="select"
  >
    <div
      styled-component="true"
    >
      <StyledControlContainer
        $clearable={true}
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="select"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <StyledValueContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <StyledPlaceholder
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </StyledPlaceholder>
              <StyledInputContainer
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $clearable={true}
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="select"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <StyledInput
                      $clearable={true}
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="select"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </StyledInput>
                    <StyledInputSizer
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </StyledInputSizer>
                  </AutosizeInput>
                </div>
              </StyledInputContainer>
            </span>
          </StyledValueContainer>
          <StyledIconsContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
          >
            <div
              styled-component="true"
            >
              <TriangleDown
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
                onClick={[Function]}
                overrides={
                  Object {
                    "Svg": [Function],
                  }
                }
                size={16}
                title="open"
              >
                <Icon
                  $clearable={true}
                  $disabled={false}
                  $error={false}
                  $isFocused={false}
                  $isLoading={false}
                  $isOpen={false}
                  $isPseudoFocused={false}
                  $multi={false}
                  $required={false}
                  $searchable={true}
                  $size="default"
                  $type="select"
                  onClick={[Function]}
                  overrides={
                    Object {
                      "Svg": [Function],
                    }
                  }
                  size={16}
                  title="open"
                  viewBox="0 0 24 24"
                >
                  <StyledSelectArrow
                    $clearable={true}
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="select"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                  >
                    <svg
                      onClick={[Function]}
                      styled-component="true"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        open
                      </title>
                      <path
                        d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                      />
                    </svg>
                  </StyledSelectArrow>
                </Icon>
              </TriangleDown>
            </div>
          </StyledIconsContainer>
        </div>
      </StyledControlContainer>
    </div>
  </StyledRoot>
</Select>
`;

exports[`Select component renders component in select mode and true for multiple choice: Component has correct render in select mode and mutiple choice equals true 1`] = `
<Select
  aria-describedby={null}
  aria-label={null}
  aria-labelledby={null}
  autoFocus={false}
  backspaceRemoves={true}
  clearable={true}
  closeOnSelect={true}
  deleteRemoves={true}
  disabled={false}
  error={false}
  escapeClearsValue={true}
  filterOptions={[Function]}
  filterOutSelected={true}
  getOptionLabel={null}
  getValueLabel={null}
  isLoading={false}
  labelKey="label"
  maxDropdownHeight="900px"
  multi={false}
  multiple={true}
  noResultsMsg="No results found"
  onBlur={[MockFunction]}
  onBlurResetsInput={true}
  onChange={[MockFunction]}
  onClose={null}
  onCloseResetsInput={true}
  onFocus={[MockFunction]}
  onInputChange={[MockFunction]}
  onOpen={null}
  onSelectResetsInput={true}
  openOnClick={true}
  options={
    Array [
      Object {
        "id": "id1",
        "label": "label1",
      },
      Object {
        "id": "id2",
        "label": "label2",
      },
      Object {
        "id": "id3",
        "label": "bel3",
      },
    ]
  }
  overrides={Object {}}
  placeholder="Select..."
  required={false}
  searchable={true}
  size="default"
  type="select"
  value={Array []}
  valueKey="id"
>
  <StyledRoot
    $clearable={true}
    $disabled={false}
    $error={false}
    $isFocused={false}
    $isLoading={false}
    $isOpen={false}
    $isPseudoFocused={false}
    $multi={false}
    $ref={[Function]}
    $required={false}
    $searchable={true}
    $size="default"
    $type="select"
  >
    <div
      styled-component="true"
    >
      <StyledControlContainer
        $clearable={true}
        $disabled={false}
        $error={false}
        $isFocused={false}
        $isLoading={false}
        $isOpen={false}
        $isPseudoFocused={false}
        $multi={false}
        $required={false}
        $searchable={true}
        $size="default"
        $type="select"
        onClick={[Function]}
        onKeyDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          styled-component="true"
        >
          <StyledValueContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
            role="list"
          >
            <span
              role="list"
              styled-component="true"
            >
              <StyledPlaceholder
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  Select...
                </div>
              </StyledPlaceholder>
              <StyledInputContainer
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
              >
                <div
                  styled-component="true"
                >
                  <AutosizeInput
                    $clearable={true}
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="select"
                    aria-autocomplete="list"
                    aria-describedby={null}
                    aria-disabled={null}
                    aria-expanded={false}
                    aria-haspopup={false}
                    aria-label={null}
                    aria-labelledby={null}
                    disabled={null}
                    inputRef={[Function]}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    overrides={
                      Object {
                        "Input": undefined,
                      }
                    }
                    required={false}
                    role="combobox"
                    value=""
                  >
                    <StyledInput
                      $clearable={true}
                      $disabled={false}
                      $error={false}
                      $isFocused={false}
                      $isLoading={false}
                      $isOpen={false}
                      $isPseudoFocused={false}
                      $multi={false}
                      $ref={[Function]}
                      $required={false}
                      $searchable={true}
                      $size="default"
                      $type="select"
                      $width="5px"
                      aria-autocomplete="list"
                      aria-describedby={null}
                      aria-disabled={null}
                      aria-expanded={false}
                      aria-haspopup={false}
                      aria-label={null}
                      aria-labelledby={null}
                      disabled={null}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={false}
                      role="combobox"
                      value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby={null}
                        aria-disabled={null}
                        aria-expanded={false}
                        aria-haspopup={false}
                        aria-label={null}
                        aria-labelledby={null}
                        disabled={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        styled-component="true"
                        value=""
                      />
                    </StyledInput>
                    <StyledInputSizer
                      $ref={[Function]}
                    >
                      <div
                        styled-component="true"
                      />
                    </StyledInputSizer>
                  </AutosizeInput>
                </div>
              </StyledInputContainer>
            </span>
          </StyledValueContainer>
          <StyledIconsContainer
            $clearable={true}
            $disabled={false}
            $error={false}
            $isFocused={false}
            $isLoading={false}
            $isOpen={false}
            $isPseudoFocused={false}
            $multi={false}
            $required={false}
            $searchable={true}
            $size="default"
            $type="select"
          >
            <div
              styled-component="true"
            >
              <TriangleDown
                $clearable={true}
                $disabled={false}
                $error={false}
                $isFocused={false}
                $isLoading={false}
                $isOpen={false}
                $isPseudoFocused={false}
                $multi={false}
                $required={false}
                $searchable={true}
                $size="default"
                $type="select"
                onClick={[Function]}
                overrides={
                  Object {
                    "Svg": [Function],
                  }
                }
                size={16}
                title="open"
              >
                <Icon
                  $clearable={true}
                  $disabled={false}
                  $error={false}
                  $isFocused={false}
                  $isLoading={false}
                  $isOpen={false}
                  $isPseudoFocused={false}
                  $multi={false}
                  $required={false}
                  $searchable={true}
                  $size="default"
                  $type="select"
                  onClick={[Function]}
                  overrides={
                    Object {
                      "Svg": [Function],
                    }
                  }
                  size={16}
                  title="open"
                  viewBox="0 0 24 24"
                >
                  <StyledSelectArrow
                    $clearable={true}
                    $disabled={false}
                    $error={false}
                    $isFocused={false}
                    $isLoading={false}
                    $isOpen={false}
                    $isPseudoFocused={false}
                    $multi={false}
                    $required={false}
                    $searchable={true}
                    $size="default"
                    $type="select"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                  >
                    <svg
                      onClick={[Function]}
                      styled-component="true"
                      viewBox="0 0 24 24"
                    >
                      <title>
                        open
                      </title>
                      <path
                        d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                      />
                    </svg>
                  </StyledSelectArrow>
                </Icon>
              </TriangleDown>
            </div>
          </StyledIconsContainer>
        </div>
      </StyledControlContainer>
    </div>
  </StyledRoot>
</Select>
`;
